objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Days_since_application_submitted__c</fullName>
        <formula>TODAY() -  Date_application_completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since application submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_post_assessment__c</fullName>
        <label>Decision post-assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Offer different role</fullName>
                </value>
                <value>
                    <fullName>Back-up role</fullName>
                </value>
                <value>
                    <fullName>Reject - YP Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_post_assessment_notes__c</fullName>
        <formula>&quot;NB: The post-assessment rejection email is sent when you select &apos;Reject&apos; and save the record. To see what you have sent, look in the &apos;Activity History&apos;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision post-assessment notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_for_tax_purposes__c</fullName>
        <description>For payroll and tax purposes</description>
        <label>Declaration for tax purposes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Statement A</fullName>
                </value>
                <value>
                    <fullName>Statement B</fullName>
                </value>
                <value>
                    <fullName>Statement C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_of_other_relationship_1__c</fullName>
        <label>Detail of other relationship 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_of_other_relationship_2__c</fullName>
        <label>Detail of other relationship 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Dietary_Requirements__c</fullName>
        <label>Details of  Dietary Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Hearing_Impairment__c</fullName>
        <label>Details of Hearing Impairment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Learning_Difficulties__c</fullName>
        <label>Details of Learning Difficulties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Medical_conditions__c</fullName>
        <label>Details of Medical conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Mental_Health_conditions__c</fullName>
        <label>Details of Mental Health conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Mobility_Issue__c</fullName>
        <label>Details of Mobility Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Visual_Impairment__c</fullName>
        <label>Details of Visual Impairment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_paid_capacity__c</fullName>
        <inlineHelpText>Application question: Please give details of your experience in a paid capacity.</inlineHelpText>
        <label>4.1.10.1.1 RM/LO: event org/mgmt (paid)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_vol_capacity__c</fullName>
        <inlineHelpText>Application question: Please give details of your experience in a voluntary capacity.</inlineHelpText>
        <label>4.1.10.1.2 RM/LO: event org/mgmt (vol)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_requirements__c</fullName>
        <label>Dietary requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Wheat-free</fullName>
                </value>
                <value>
                    <fullName>Dairy-free</fullName>
                </value>
                <value>
                    <fullName>Nut-free</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Coeliac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disabilty__c</fullName>
        <inlineHelpText>If you do have a disability, please give details in relation to what reasonable adjustments may be required to help you best fulfil this position.
You must provide an answer – If no disability, state &quot;NA&quot;.</inlineHelpText>
        <label>HSI52A.Disability Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disciplinary_Investig_Sanction_Detail__c</fullName>
        <inlineHelpText>Please provide further information</inlineHelpText>
        <label>HSI3.2B: Discip Investig Sanction Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disciplinary_Investigation_or_Sanction__c</fullName>
        <inlineHelpText>Have you been the subject of any disciplinary investigation and/ or sanction by any organisation due to concerns about your behaviour towards children or young people?</inlineHelpText>
        <label>HSI3B: Discip Investigation or Sanction?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisclosureReceived__c</fullName>
        <inlineHelpText>This is the date we received the disclosure from DBS. This is different from the date the DBS was issued.</inlineHelpText>
        <label>DisclosureReceived</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disclosure_outcome__c</fullName>
        <inlineHelpText>This is the disclosure outcome. A clear DBS requires no further action. If the field says &quot;See Paper Disclosure&quot; further information from the candidate about their DBS is required.</inlineHelpText>
        <label>DisclosureOutcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>See paper disclosure</fullName>
                </value>
                <value>
                    <fullName>Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosuredate__c</fullName>
        <inlineHelpText>This is the date the DBS was issued.</inlineHelpText>
        <label>DisclosureDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosurenumber__c</fullName>
        <inlineHelpText>This is the candidate&apos;s DBS Disclosure number.</inlineHelpText>
        <label>DisclosureNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dismissal_details__c</fullName>
        <label>Dismissal details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_licence__c</fullName>
        <inlineHelpText>Application question: Do you hold a full UK drivers licence and have access to a car?</inlineHelpText>
        <label>Drivers licence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_contact_address__c</fullName>
        <label>Emergency contact address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_contact_mobile__c</fullName>
        <label>Emergency contact mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_contact_name__c</fullName>
        <label>Emergency contact name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_contact_phone__c</fullName>
        <label>Emergency contact phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_of_availability_for_new_role__c</fullName>
        <label>End of availability for new role</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_unavailability_1__c</fullName>
        <label>End of unavailability 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_unavailability_2__c</fullName>
        <label>End of unavailability 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_unavailability_3__c</fullName>
        <label>End of unavailability 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engaging_Young_People__c</fullName>
        <label>Engaging Young People</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Epi_pen_carrier__c</fullName>
        <label>HSI2A.Epi Pen Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eventbrite_link__c</fullName>
        <label>Eventbrite link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evolution_Referee_Call_Log__c</fullName>
        <label>Evolution Referee Call Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exp_gained_paid_vol_org_events__c</fullName>
        <inlineHelpText>Application question: Did you gain this experience in a paid or voluntary capacity?</inlineHelpText>
        <label>4.1.10.1 RM/LO: experience type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_managing_events_paid_vol__c</fullName>
        <inlineHelpText>Application question: Do you have experience of organising/managing events/projects in either a paid or voluntary capacity?</inlineHelpText>
        <label>4.1.10 RM/LO: exp of event org/mgmt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_working_with_YP_from__c</fullName>
        <inlineHelpText>Application question: Do you have experience working with any of the following young people? A young person from...</inlineHelpText>
        <label>4.1.4 specialised experience (all roles)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Pupil Referral Unit</fullName>
                </value>
                <value>
                    <fullName>From a care background</fullName>
                </value>
                <value>
                    <fullName>History of offending</fullName>
                </value>
                <value>
                    <fullName>Permanently excluded from school</fullName>
                </value>
                <value>
                    <fullName>Who displays challenging behaviour</fullName>
                </value>
                <value>
                    <fullName>With a Mental Health Condition</fullName>
                </value>
                <value>
                    <fullName>With Learning Difficulties</fullName>
                </value>
                <value>
                    <fullName>With English as Second language</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exper_managing_challenging_behaviour__c</fullName>
        <inlineHelpText>Do you have significant experience managing challenging behaviour?</inlineHelpText>
        <label>APL Exper. of chall. behaviour?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exper_of_YP__c</fullName>
        <inlineHelpText>Do you have experience working in a residential or one to one capacity supporting young people with additional needs?</inlineHelpText>
        <label>SW: Exper of supporting YP 121 or resid.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_in_paid_capacity__c</fullName>
        <inlineHelpText>Application question: Please give details of your experience in a paid capacity</inlineHelpText>
        <label>4.1.2.1.1 Exper. working with YP (paid)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_in_voluntary_capacity__c</fullName>
        <inlineHelpText>Application question: Please give details of your experience in a voluntary capacity</inlineHelpText>
        <label>4.1.2.1.2 Exper. working with YP (vol)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_of_residential_work__c</fullName>
        <inlineHelpText>Application question: Do you have experience of residential work?</inlineHelpText>
        <label>4.1.3 Experience of residential work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_voluntary_capacity_ppl_mgmt__c</fullName>
        <inlineHelpText>Application question: Please give details of your experience in a voluntary capacity?</inlineHelpText>
        <label>4.1.6.1.2 PL: People mgmt exper. (vol)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Health_Info__c</fullName>
        <inlineHelpText>Do you have any other additional needs that may require reasonable adjustments or that you would like us to be aware of, or is there any other information you would like to add?</inlineHelpText>
        <label>HSI10A: Extra Health Info?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_info__c</fullName>
        <inlineHelpText>Question on form: Is there anything else you would like to tell us?</inlineHelpText>
        <label>Extra info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facilitation_of_Groups__c</fullName>
        <label>Facilitation of Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Favourite_part_of_The_Challenge__c</fullName>
        <label>Favourite part of NCS</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_decision__c</fullName>
        <label>Feedback decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invite to apply for higher role</fullName>
                </value>
                <value>
                    <fullName>Offer same role (no need for assessment)</fullName>
                </value>
                <value>
                    <fullName>Invite to apply for same role next year</fullName>
                </value>
                <value>
                    <fullName>Do not rehire in any capacity</fullName>
                </value>
                <value>
                    <fullName>Offer different role (no need for assessment)</fullName>
                </value>
                <value>
                    <fullName>Invite to apply for different role</fullName>
                </value>
                <value>
                    <fullName>Same Role</fullName>
                </value>
                <value>
                    <fullName>Same category role</fullName>
                </value>
                <value>
                    <fullName>Different category role (assessment required)</fullName>
                </value>
                <value>
                    <fullName>Different category role (no assessment required)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_log__c</fullName>
        <label>Feedback log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_reviewed__c</fullName>
        <description>Date that feedback is reviewed by Staffing</description>
        <label>Feedback reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_signed_off__c</fullName>
        <label>Feedback signed off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Aid_certificate_expiry_date__c</fullName>
        <inlineHelpText>Please provide the expiry date of the certificate.</inlineHelpText>
        <label>HSI11.3A: First Aid Cert Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_certificate_no__c</fullName>
        <inlineHelpText>Please provide the type of certificate and the certificate number</inlineHelpText>
        <label>HSI11.2A: First Aid Type and Cert No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_time_or_part_time__c</fullName>
        <inlineHelpText>Application question: Full-time or part-time?</inlineHelpText>
        <label>3.4.1 Full-time or part-time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_details__c</fullName>
        <description>This links up to field &quot;How did applicant hear about TC?&quot;</description>
        <label>Source of application: other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Further_details_other__c</fullName>
        <inlineHelpText>Application question: &quot;Please provide further details where you have indicated &quot;&quot;Other&quot;&quot; [SW Chosen Other within a skill set or chosen other as a skill]</inlineHelpText>
        <label>4.1.8.3.11 SW: other skill details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GB_Group_DBS_application_started__c</fullName>
        <inlineHelpText>This is the date  the candidate started their GB Group application.</inlineHelpText>
        <label>GB Group DBS application started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GB_Group_issued_DBS_uploaded__c</fullName>
        <label>GB Group issued DBS uploaded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMail_GDocs_GDrive_etc__c</fullName>
        <label>GMail, GDocs, GDrive etc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Experience</fullName>
                </value>
                <value>
                    <fullName>Some Experience</fullName>
                </value>
                <value>
                    <fullName>Experienced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender2__c</fullName>
        <formula>TEXT(Contact__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genetic_Disorders__c</fullName>
        <inlineHelpText>Application question: Genetic Disorders</inlineHelpText>
        <label>4.1.8.3.3 SW: Genetic Disorders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cystic Fibrosis</fullName>
                </value>
                <value>
                    <fullName>Down&apos;s Syndrome</fullName>
                </value>
                <value>
                    <fullName>Klinefelter Syndrome</fullName>
                </value>
                <value>
                    <fullName>Muscular Dystrophy</fullName>
                </value>
                <value>
                    <fullName>Prader-Willi Syndrome</fullName>
                </value>
                <value>
                    <fullName>Fragile X</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genetic_disorders_other__c</fullName>
        <label>4.1.8.3.3.1 SW: Genetic disorder details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSI_Disability__c</fullName>
        <inlineHelpText>Do you currently have a disability?</inlineHelpText>
        <label>HSI5A.Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Copy_DBS_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to record that a hard copy of the DBS has been received upon which a decision on the candidate&apos;s suitability to work with us can be made.</inlineHelpText>
        <label>Hard Copy DBS received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_valid_CRB__c</fullName>
        <description>Picklist for when candidate has a CRB that is dated 30 September or later</description>
        <inlineHelpText>Select &quot;yes - valid&quot; when candidate has a DBS that is dated 30 September (of the previous year) or later</inlineHelpText>
        <label>!DEL Has DBS from previous job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - checked and valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Condition__c</fullName>
        <label>HSI3A.Health Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Epilepsy</fullName>
                </value>
                <value>
                    <fullName>Heart Condition</fullName>
                </value>
                <value>
                    <fullName>ME (Chronic Fatigue Syndrome)</fullName>
                </value>
                <value>
                    <fullName>Migraines</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Travel Sickness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_Impairment2__c</fullName>
        <label>Hearing Impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_Impairment__c</fullName>
        <inlineHelpText>Application question: Hearing Impairment</inlineHelpText>
        <label>4.1.8.3.5 SW: Hearing Impairment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
                <value>
                    <fullName>Profound/Deaf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heart_Conditions__c</fullName>
        <inlineHelpText>Application question: Heart Conditions</inlineHelpText>
        <label>4.1.8.3.6 SW: Heart Conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coronary</fullName>
                </value>
                <value>
                    <fullName>Ischemic</fullName>
                </value>
                <value>
                    <fullName>Congenital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_text_for_Role__c</fullName>
        <description>A formula field that acts as help text</description>
        <formula>IF( ISPICKVAL(Role_to_assess_for__c, &quot; &quot;) , &quot;&apos;Role&apos; is the field that the assessment and training booking emails use. If you decide that a applicant should be offered a different role to the one they were assessed for, change it here.&quot;, &quot; &apos;Role&apos; is the field that the assessment and training booking emails use. If you decide that a applicant should be offered a different role to the one they were assessed for, change it here.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help text for Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_applicant_hear_about_TC__c</fullName>
        <label>How did applicant hear about TC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online advertisement/job site</fullName>
                </value>
                <value>
                    <fullName>Mail out (other)</fullName>
                </value>
                <value>
                    <fullName>Mail out from NCS with The Challenge</fullName>
                </value>
                <value>
                    <fullName>Newspaper advertisement</fullName>
                </value>
                <value>
                    <fullName>Printed advertisement</fullName>
                </value>
                <value>
                    <fullName>Careers event</fullName>
                </value>
                <value>
                    <fullName>Web search</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ideal_for_DAPM__c</fullName>
        <label>Ideal for DAPM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_for_programme_admin__c</fullName>
        <label>Ideal for programme admin</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_what_setting__c</fullName>
        <inlineHelpText>Application question: In what setting? (For example &apos;In a Pru&apos;)</inlineHelpText>
        <label>4.1.7.2 APL: Setting of behaviour exper.</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inclusiveness_Sympathetic_to_all_YP__c</fullName>
        <label>Inclusiveness (Sympathetic to all YP)</label>
        <type>TextArea</type>
    </fields>
</CustomObject>